2002-08-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/windows/installing.texi: Include info from Wiki. 

2002-08-16  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* scripts/lilypond-book.py (output_dict): Replace
	\includegraphics{xxx.eps} -> \includegraphics{xxx} to 
	simplify for pdflatex users (makes no difference to latex users).

2002-08-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/index.texi: 
	* Documentation/windows/compiling.texi: 
	* Documentation/windows/installing.texi: Update to reflect
	LilyPond's inclusion into Cygwin.

2002-08-15  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/test/phrasing-slur-height.ly: New file.

	* scm/grob-property-description.scm (height-limit, ratio): Add.

	* lily/slur.cc: 
	* scm/grob-description.scm (Slur, PhrasingSlur): Move height-limit
	and ratio out of details.

	* lily/scores.cc (Input_file_settings): Initalize global_header_.

	* lily/include/file-results.hh (class Input_file_settings): Add
	private constructor.

	* cygwin/GNUmakefile: [CYGWIN] Install bug-lilypond-cygwin.  Typo
	fix.  Add kpsewhich commands (Thanks Mats).

	* cygwin/bug-lilypond-cygwin.sh: New file.

	* stepmake/stepmake/help2man-rules.make: Better way of showing
	help2man command.

	* Documentation/topdocs/FAQ.texi: Add more possible stale font
	paths.

	* stepmake/bin/package-diff.py: Prepend ./ to cut-and-pastable
	commands.

	* Documentation/topdocs/INSTALL.texi: Mention the need to and how
	to create configure for CVS source trees.  Mention libkpathsea-dev
	as alternative possible name for tetex-devel (or should that be
	the other way around?).

2002-08-15  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/include/file-results.hh (class Input_file_settings):
	encapsulate file settings in a class, Input_file_settings.

	* lily/scores.cc: new function ly_set_point_and_click_x
	
	* Documentation/topdocs/README.texi (Top): add note about xdelta

	* Documentation/topdocs/INSTALL.texi (Top): move kpathsea to problems
	section.
	