@@ -1,3 +1,14 @@
+2002-08-16  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* ly/engraver-init.ly (ChordNamesContext): minimumverticalExtent
+	-> minimumVerticalExtent
+
+2002-08-16  Stephen Peters <portnoy@portnoy.org>
+
+	* scm/pdf.scm, pdftex.scm: pdftex updates
+
+	* scripts/ly2dvi.py: pdflatex support
+	
 2002-08-16  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* Documentation/windows/installing.texi: Include info from Wiki. 
